@@ -1,3 +1,8 @@
+2006-09-27  Guillem Jover  <guillem.jover@nokia.com>
+
+	* launcher/launcher.c (sigs_interrupt): New function.
+	(main): Use sigs_interrupt instead of directly siginterrupt.
+
 2006-09-15  Guillem Jover  <guillem.jover@nokia.com>
 
 	* launcher/report.h (debug): Add a missing # in front of __VA_ARGS__.
